# RayTracing

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
assets/scenes/: cornell_box_0.json  cornell_box_1.json  cornell_box_2.json
assets/scenes/cornell_box/: config.json
src/: main.cpp
src/common/: convert.hpp  defs.hpp  equation.hpp  random.hpp  structs.hpp  utils.hpp
src/core/: camera.hpp  ortho_bases.hpp  ray.hpp  scenes.hpp  tracer.hpp  transformation.hpp
src/hittable/: aabb_box.hpp  circle.hpp  cone.hpp  cone_face.hpp  cylinder.hpp  cylinder_face.hpp  ellipsoid.hpp  hittable.hpp  hittable_list.hpp  mesh.hpp  quad.hpp  sphere.hpp  torus.hpp
src/lights/: light_circle.hpp  light_quad.hpp  light_sphere.hpp
src/material/: diffuse_light.hpp  material.hpp  material_dielectric.hpp  material_isotropic.hpp  material_lambertian.hpp  material_metal.hpp
src/pdfs/: pdf.hpp  pdf_cosine.hpp  pdf_hittable.hpp  pdf_mixture.hpp  pdf_sphere.hpp
src/sprites/: hittable.hpp  hittable_list.hpp  mesh.hpp  sphere.hpp
src/texture/: texture.hpp  texture_color.hpp  texture_image.hpp
